feat: Mejorar el manejo de errores en la eliminación de docentes, programas, roles y usuarios. Se implementa un servicio de manejo de errores para extraer mensajes específicos y se actualizan las notificaciones con colores y mensajes adecuados según el tipo de error. Se optimizan los estilos de las notificaciones para una mejor experiencia de usuario.

--- a/src/app/pages/admin/manage-users/manage-users.component.css
+++ b/src/app/pages/admin/manage-users/manage-users.component.css
@@ -323,12 +323,18 @@ mat-table {
   color: white !important;
 }
 
+::ng-deep .snackbar-warning {
+  background-color: #ff9800 !important;
+  color: white !important;
+}
+
 ::ng-deep .snackbar-error {
   background-color: #f44336 !important;
   color: white !important;
 }
 
 ::ng-deep .snackbar-success .mat-mdc-button,
+::ng-deep .snackbar-warning .mat-mdc-button,
 ::ng-deep .snackbar-error .mat-mdc-button {
   color: white !important;
 }
