feat: Optimizar el rendimiento y la gestión de estado en varios componentes. Se implementa throttling en el servicio de ActivityMonitor para evitar llamadas excesivas, se añaden estrategias de detección de cambios OnPush en los componentes Header y Sidebar, y se mejora la eficiencia de ngFor con trackBy en múltiples listas. Además, se implementa limpieza de suscripciones en el componente PazSalvo y se optimiza el manejo de fechas en el DashboardFuncionario, mejorando la experiencia del usuario y el rendimiento general de la aplicación.

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- sidebar.component.html -->
 <nav [class.closed]="!isSidebarOpen" class="sidebar">
   <ul>
-    <li *ngFor="let item of menuItems">
+    <li *ngFor="let item of menuItems; trackBy: trackByLabel">
       <!-- Separador visual -->
       <div *ngIf="item.action === 'separator'" class="sidebar-separator">
         <hr>
