--- a/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
+++ b/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
@@ -266,7 +266,7 @@
                   <mat-icon>check_circle</mat-icon>
                   <span class="estado-nombre">Aprobada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.Aprobada }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes.APROBADA || 0 }}</div>
               </mat-card-content>
             </mat-card>
 
@@ -276,7 +276,7 @@
                   <mat-icon>send</mat-icon>
                   <span class="estado-nombre">Enviada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.Enviada }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes.ENVIADA || 0 }}</div>
               </mat-card-content>
             </mat-card>
 
@@ -286,7 +286,7 @@
                   <mat-icon>hourglass_empty</mat-icon>
                   <span class="estado-nombre">En Proceso</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes['En Proceso'] }}</div>
+                <div class="estado-valor">{{ (data.estadosSolicitudes.APROBADA_FUNCIONARIO || 0) + (data.estadosSolicitudes.APROBADA_COORDINADOR || 0) }}</div>
               </mat-card-content>
             </mat-card>
 
@@ -296,7 +296,7 @@
                   <mat-icon>cancel</mat-icon>
                   <span class="estado-nombre">Rechazada</span>
                 </div>
-                <div class="estado-valor">{{ data.estadosSolicitudes.Rechazada }}</div>
+                <div class="estado-valor">{{ data.estadosSolicitudes.RECHAZADA || 0 }}</div>
               </mat-card-content>
             </mat-card>
           </div>
