--- a/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
+++ b/src/app/pages/funcionario/modulo-estadistico/cursos-verano/cursos-verano-dashboard.component.html
@@ -376,16 +376,16 @@
               </mat-card-header>
               <mat-card-content>
                 <!-- ELIMINAR el área blanca vacía y mostrar directamente las tarjetas -->
-                <div *ngIf="data && data.predicciones && data.predicciones.programasConTendenciaCreciente && data.predicciones.programasConTendenciaCreciente.length > 0" class="predicciones-programas">
-                  <div *ngFor="let programa of data.predicciones.programasConTendenciaCreciente" class="prediccion-programa-card">
+                <div *ngIf="data && data.predicciones && data.predicciones.todasLasPrediccionesPorPrograma && data.predicciones.todasLasPrediccionesPorPrograma.length > 0" class="predicciones-programas">
+                  <div *ngFor="let programa of data.predicciones.todasLasPrediccionesPorPrograma" class="prediccion-programa-card">
                     <div class="programa-nombre">{{ programa.nombre }}</div>
                     <div class="demanda-actual">Actual: {{ programa.demandaActual }}</div>
                     <div class="demanda-estimada">Estimada: {{ programa.demandaEstimada }}</div>
                     <div class="variacion">Variación: {{ programa.variacion }}</div>
-                    <div class="tendencia creciente">CRECIENTE</div>
+                    <div class="tendencia" [ngClass]="'tendencia-' + programa.tendencia?.toLowerCase()">{{ programa.tendencia }}</div>
                   </div>
                 </div>
-                <div *ngIf="!data || !data.predicciones || !data.predicciones.programasConTendenciaCreciente || data.predicciones.programasConTendenciaCreciente.length === 0" class="no-data">
+                <div *ngIf="!data || !data.predicciones || !data.predicciones.todasLasPrediccionesPorPrograma || data.predicciones.todasLasPrediccionesPorPrograma.length === 0" class="no-data">
                   No hay datos de predicciones disponibles
                 </div>
               </mat-card-content>
