--- a/src/app/pages/funcionario/cursos-intersemestrales/visualizar-solicitudes/visualizar-solicitudes.component.html
+++ b/src/app/pages/funcionario/cursos-intersemestrales/visualizar-solicitudes/visualizar-solicitudes.component.html
@@ -37,7 +37,7 @@
 
   <!-- Lista de solicitudes -->
   <div *ngIf="!cargando" class="solicitudes-section">
-    <h3>📋 Todas las Solicitudes</h3>
+    <h3>Todas las Solicitudes</h3>
     
     <div *ngIf="solicitudesFiltradas.length === 0" class="no-data">
       <mat-icon>info</mat-icon>
