--- a/src/app/pages/funcionario/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.css
+++ b/src/app/pages/funcionario/cursos-intersemestrales/gestionar-cursos/gestionar-cursos.component.css
@@ -129,6 +129,12 @@ table {
 }
 
 /* Información del docente */
+.texto-sin-asignar {
+  color: #999;
+  font-style: italic;
+  font-size: 0.9em;
+}
+
 .docente-info {
   display: flex;
   flex-direction: column;
